--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   margin: 30vw auto;
-  max-width: 400px;
+  max-width: 30vw;
+  max-height: 50vw;
   padding: 2rem;
   text-align: center;
   border-radius: 20px;
@@ -26,6 +27,13 @@ button:hover{
   color: rgba(25, 255, 25, 1);
 }
 
+button:active{
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-radius: 3px;
+  margin: 5px;
+}
+
 body{
     background-image: -webkit-linear-gradient(0deg, #000000, #112111);
 }
@@ -34,4 +42,11 @@ input{
   background-color: rgba(255, 255, 255, 0.5);
   border: 0 solid rgba(255, 255, 255, 0.6);
   border-radius: 3px;
+}
+
+.book{
+  width: 30vw;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 0px solid rgba(255, 255, 255, 0.25);
+  border-radius: 5px;
 }
