--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
 #root {
   margin: 30vw auto;
   max-width: 50vw;
-  max-height: 50vw;
   padding: 2rem;
   text-align: center;
   border-radius: 20px;
   font-family: Calibri, serif;
   background-image: -webkit-linear-gradient(-45deg, #00d0ff, #00ff66);
 }
-h1{
-  border: 0px solid rgba(255, 255, 255, 0.5);
-  margin: 5px;
+h1, h2{
+  border: 0 solid rgba(255, 255, 255, 0.5);
+  margin-left: 30%;
+  margin-right: 30%;
+  max-width: 150px;
   border-radius: 10px;
   padding: 10px;
   background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0), rgba(255, 255, 255, 0.1));
